<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_terminal_category">
        <SeekBarPreference
            android:defaultValue="13"
            android:key="terminal_font_size"
            android:max="24"
            android:title="@string/settings_terminal_font_size"
            app:min="8"
            app:showSeekBarValue="true" />

        <ListPreference
            android:defaultValue="default"
            android:entries="@array/terminal_theme_labels"
            android:entryValues="@array/terminal_theme_values"
            android:key="terminal_theme"
            android:summary="%s"
            android:title="@string/settings_terminal_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_connection_category">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="strict_host_key"
            android:summary="@string/settings_strict_host_key_summary"
            android:title="@string/settings_strict_host_key" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auto_reconnect"
            android:summary="@string/settings_auto_reconnect_summary"
            android:title="@string/settings_auto_reconnect" />

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="keep_alive_sec"
            android:summary="@string/settings_keep_alive_summary"
            android:title="@string/settings_keep_alive" />

        <Preference
            android:key="known_hosts"
            android:summary="@string/settings_known_hosts_summary"
            android:title="@string/settings_known_hosts" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_security_category">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="app_lock"
            android:summary="@string/settings_app_lock_summary"
            android:title="@string/settings_app_lock" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_backup_category">
        <Preference
            android:key="export_backup"
            android:summary="@string/settings_export_summary"
            android:title="@string/settings_export" />
        <Preference
            android:key="import_backup"
            android:summary="@string/settings_import_summary"
            android:title="@string/settings_import" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about">
        <Preference
            android:key="about_version"
            android:summary="1.0.0"
            android:title="@string/settings_version" />
    </PreferenceCategory>
</PreferenceScreen>
